--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-jscs": "^1.0.0",
     "lodash": "^2.4.1",
-    "chai-things": "^0.2.0"
+    "chai-things": "^0.2.0",
+    "grunt-contrib-connect": "^0.9.0",
+    "dgeni": "^0.4.1",
+    "dgeni-packages": "^0.10.8",
+    "grunt-contrib-copy": "^0.7.0"
   }
 }
