--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "grunt-contrib-connect": "^0.9.0",
     "dgeni": "^0.4.1",
     "dgeni-packages": "^0.10.8",
-    "grunt-contrib-copy": "^0.7.0"
+    "grunt-contrib-copy": "^0.7.0",
+    "shelljs": "^0.3.0",
+    "browserify": "^7.0.2"
   }
 }
