--- a/package.json
+++ b/package.json
@@ -46,6 +46,12 @@
     "dgeni-packages": "^0.10.8",
     "grunt-contrib-copy": "^0.7.0",
     "shelljs": "^0.3.0",
-    "browserify": "^7.0.2"
-  }
+    "browserify": "^7.0.2",
+    "grunt-bump": "0.0.16",
+    "grunt-gh-pages": "^0.9.1",
+    "grunt-npm": "0.0.2"
+  },
+  "contributors": [
+    "Brian Hann <c0bra@users.noreply.github.com>"
+  ]
 }
