--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://github.com/c0bra/smeans.js",
   "author": {
     "name": "Brian Hann",
-    "email": "brian.hann@gmail.com"
+    "email": "c0bra@users.noreply.github.com"
   },
   "repository": {
     "type": "git",
