--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
-  "name": "smeans.js",
+  "name": "smeans",
   "main": "dist/js/smeans.js",
   "version": "0.1.6",
   "homepage": "https://github.com/c0bra/smeans.js",
   "authors": [
-    "Brian Hann <brian.hann@gmail.com>"
+    "Brian Hann <c0bra@users.noreply.github.com>"
   ],
   "description": "S-Means clustering in JavaScript",
   "moduleType": [
